@@ -1,3 +1,9 @@
+2018-10-08  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/HTML.pm (_parse_htmlxref_files) [TEST]:
+	Strip leading directories from file name in order to have 
+	reliable reference test results for out-of-source builds.
+
 2018-10-06  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Parser.pm (_end_line) <@columnfractions>: Set the 
